list(APPEND utest_lists_features cxx_std_14 )

list(APPEND utest_lists_files "list_array_enchanced_test_contains.cpp")
list(APPEND utest_lists_files "list_array_enchanced_test_exclude_elem.cpp")
list(APPEND utest_lists_files "list_array_enchanced_test_find.cpp")
list(APPEND utest_lists_files "list_array_enchanced_test.h")
list(APPEND utest_lists_files "list_array_enchanced_test_insert.cpp")
list(APPEND utest_lists_files "list_array_enchanced_test_move_elem.cpp")
list(APPEND utest_lists_files "list_array_enchanced_test_remove.cpp")
list(APPEND utest_lists_files "list_array_selforganizing_test_contains.cpp")
list(APPEND utest_lists_files "list_array_selforganizing_test_exclude_elem.cpp")
list(APPEND utest_lists_files "list_array_selforganizing_test_find.cpp")
list(APPEND utest_lists_files "list_array_selforganizing_test.h")
list(APPEND utest_lists_files "list_array_selforganizing_test_insert.cpp")
list(APPEND utest_lists_files "list_array_selforganizing_test_move_elem.cpp")
list(APPEND utest_lists_files "list_array_selforganizing_test_remove.cpp")
list(APPEND utest_lists_files "list_array_sorted_test_contains.cpp")
list(APPEND utest_lists_files "list_array_sorted_test_exclude_elem.cpp")
list(APPEND utest_lists_files "list_array_sorted_test_find.cpp")
list(APPEND utest_lists_files "list_array_sorted_test.h")
list(APPEND utest_lists_files "list_array_sorted_test_insert.cpp")
list(APPEND utest_lists_files "list_array_sorted_test_move_elem.cpp")
list(APPEND utest_lists_files "list_array_sorted_test_remove.cpp")
list(APPEND utest_lists_files "list_array_sorted_warden_test_contains.cpp")
list(APPEND utest_lists_files "list_array_sorted_warden_test_exclude_elem.cpp")
list(APPEND utest_lists_files "list_array_sorted_warden_test_find.cpp")
list(APPEND utest_lists_files "list_array_sorted_warden_test.h")
list(APPEND utest_lists_files "list_array_sorted_warden_test_insert.cpp")
list(APPEND utest_lists_files "list_array_sorted_warden_test_move_elem.cpp")
list(APPEND utest_lists_files "list_array_sorted_warden_test_remove.cpp")
list(APPEND utest_lists_files "list_array_test_contains.cpp")
list(APPEND utest_lists_files "list_array_test_exclude_elem.cpp")
list(APPEND utest_lists_files "list_array_test_find.cpp")
list(APPEND utest_lists_files "list_array_test.h")
list(APPEND utest_lists_files "list_array_test_insert.cpp")
list(APPEND utest_lists_files "list_array_test_move_elem.cpp")
list(APPEND utest_lists_files "list_array_test_remove.cpp")
list(APPEND utest_lists_files "list_dynamic_test_contains.cpp")
list(APPEND utest_lists_files "list_dynamic_test.h")
list(APPEND utest_lists_files "list_dynamic_test_insert.cpp")
list(APPEND utest_lists_files "list_dynamic_test_remove.cpp")
list(APPEND utest_lists_files "lists.cpp")
list(APPEND utest_lists_files "list_stlforward_test_contains.cpp")
list(APPEND utest_lists_files "list_stlforward_test_find.cpp")
list(APPEND utest_lists_files "list_stlforward_test.h")
list(APPEND utest_lists_files "list_stlforward_test_insert.cpp")
list(APPEND utest_lists_files "list_stlforward_test_remove.cpp")
list(APPEND utest_lists_files "list_stl_test_contains.cpp")
list(APPEND utest_lists_files "list_stl_test_find.cpp")
list(APPEND utest_lists_files "list_stl_test.h")
list(APPEND utest_lists_files "list_stl_test_insert.cpp")
list(APPEND utest_lists_files "list_stl_test_remove.cpp")

#list(APPEND utest_lists_compile_opt "-Winline")

message("Target: utest_lists")
add_executable( utest_lists )
target_sources( utest_lists PRIVATE ${utest_lists_files} )
target_compile_features(utest_lists PRIVATE ${utest_lists_features} )
#target_compile_options(lists INTERFACE ${utest_lists_compile_opt} )

target_link_libraries(utest_lists PRIVATE asplists asptest)
set_target_properties(utest_lists PROPERTIES LINKER_LANGUAGE CXX)

add_test(NAME utest-lists COMMAND "$<TARGET_FILE:utest_lists>")


################
# GOOGLE TESTS #
################
add_subdirectory(list_stl)
