##################
# utests/treeset #
##################
list(APPEND utest_treesets_features cxx_std_14 )

#message(WARNING "BROKEN: treeset_array_test_exclude_elem.cpp")
list(APPEND utest_treesets_files "treeset_array_balancing_test_contains.cpp")
list(APPEND utest_treesets_files "treeset_array_balancing_test_find.cpp")
list(APPEND utest_treesets_files "treeset_array_balancing_test.h")
list(APPEND utest_treesets_files "treeset_array_balancing_test_insert.cpp")
list(APPEND utest_treesets_files "treeset_array_balancing_test_move_nodes_down.cpp")
list(APPEND utest_treesets_files "treeset_array_balancing_test_move_nodes_side.cpp")
list(APPEND utest_treesets_files "treeset_array_balancing_test_move_nodes_up.cpp")
list(APPEND utest_treesets_files "treeset_array_balancing_test_rebalance_case_1.cpp")
list(APPEND utest_treesets_files "treeset_array_balancing_test_rebalance_case_2.cpp")
list(APPEND utest_treesets_files "treeset_array_balancing_test_rebalance.cpp")
list(APPEND utest_treesets_files "treeset_array_balancing_test_remove.cpp")
list(APPEND utest_treesets_files "treeset_array_balancing_test_remove_node.cpp")
list(APPEND utest_treesets_files "treeset_array_balancing_test_remove_value.cpp")
list(APPEND utest_treesets_files "treeset_array_balancing_test_traverse_last.cpp")
list(APPEND utest_treesets_files "treeset_array_balancing_test_update_node_height.cpp")
list(APPEND utest_treesets_files "treeset_array_test_contains.cpp")
list(APPEND utest_treesets_files "treeset_array_test_find.cpp")
list(APPEND utest_treesets_files "treeset_array_test.h")
list(APPEND utest_treesets_files "treeset_array_test_insert.cpp")
list(APPEND utest_treesets_files "treeset_array_test_move_nodes_up.cpp")
list(APPEND utest_treesets_files "treeset_array_test_remove.cpp")
list(APPEND utest_treesets_files "treeset_array_test_remove_node.cpp")
list(APPEND utest_treesets_files "treeset_array_test_remove_value.cpp")
list(APPEND utest_treesets_files "treeset_array_test_traverse_last.cpp")
list(APPEND utest_treesets_files "treeset_dynamic_balancing_test_append_node.cpp")
list(APPEND utest_treesets_files "treeset_dynamic_balancing_test_contains.cpp")
list(APPEND utest_treesets_files "treeset_dynamic_balancing_test_exclude_double_node_2.cpp")
list(APPEND utest_treesets_files "treeset_dynamic_balancing_test_exclude_double_node.cpp")
list(APPEND utest_treesets_files "treeset_dynamic_balancing_test_exclude_single_node.cpp")
list(APPEND utest_treesets_files "treeset_dynamic_balancing_test_find.cpp")
list(APPEND utest_treesets_files "treeset_dynamic_balancing_test.h")
list(APPEND utest_treesets_files "treeset_dynamic_balancing_test_insert.cpp")
list(APPEND utest_treesets_files "treeset_dynamic_balancing_test_rebalance_case_1.cpp")
list(APPEND utest_treesets_files "treeset_dynamic_balancing_test_rebalance_case_2.cpp")
list(APPEND utest_treesets_files "treeset_dynamic_balancing_test_rebalance.cpp")
list(APPEND utest_treesets_files "treeset_dynamic_balancing_test_remove.cpp")
list(APPEND utest_treesets_files "treeset_dynamic_balancing_test_traverse_last.cpp")
list(APPEND utest_treesets_files "treeset_dynamic_test_contains.cpp")
list(APPEND utest_treesets_files "treeset_dynamic_test_exclude_double_node.cpp")
list(APPEND utest_treesets_files "treeset_dynamic_test_exclude_single_node.cpp")
list(APPEND utest_treesets_files "treeset_dynamic_test_find.cpp")
list(APPEND utest_treesets_files "treeset_dynamic_test.h")
list(APPEND utest_treesets_files "treeset_dynamic_test_insert.cpp")
list(APPEND utest_treesets_files "treeset_dynamic_test_remove.cpp")
list(APPEND utest_treesets_files "treesets.cpp")
list(APPEND utest_treesets_files "treeset_stl_test_contains.cpp")
list(APPEND utest_treesets_files "treeset_stl_test.h")
list(APPEND utest_treesets_files "treeset_stl_test_insert.cpp")
list(APPEND utest_treesets_files "treeset_stl_test_remove.cpp")

#list(APPEND utest_treesets_compile_opt "-Winline")

message("Target: utest_treesets")
add_executable( utest_treesets )
target_sources( utest_treesets PRIVATE ${utest_treesets_files} )
target_compile_features(utest_treesets PRIVATE ${utest_treesets_features} )
#target_compile_options(treesets INTERFACE ${utest_treesets_compile_opt} )

target_link_libraries(utest_treesets PRIVATE asptreesets asptest)
set_target_properties(utest_treesets PROPERTIES LINKER_LANGUAGE CXX)

unset(utest_treesets_features)
unset(utest_treesets_files)
unset(utest_treesets_compile_opt)

add_test(NAME utest-treesets COMMAND "$<TARGET_FILE:utest_treesets>")
